@@ -569,7 +569,7 @@ if (isActionAccessible($guid, $connection2, '/modules/Students/student_view_deta
                         }
                         echo '</table>';
 
-                        //Get list of teachers
+                        //Get and display a list of student's teachers
                         echo '<h4>';
                         echo __($guid, "Student's Teachers");
                         echo '</h4>';
@@ -588,7 +588,50 @@ if (isActionAccessible($guid, $connection2, '/modules/Students/student_view_deta
                         } else {
                             echo '<ul>';
                             while ($rowDetail = $resultDetail->fetch()) {
-                                echo '<li>'.htmlPrep(formatName('', $rowDetail['preferredName'], $rowDetail['surname'], 'Student', false).' <'.$rowDetail['email'].'>').'</li>';
+                                echo '<li>'.htmlPrep(formatName('', $rowDetail['preferredName'], $rowDetail['surname'], 'Student', false));
+                                if ($rowDetail['email'] != '') {
+                                    echo htmlPrep(' <'.$rowDetail['email'].'>');
+                                }
+                                echo '</li>';
+                            }
+                            echo '</ul>';
+                        }
+
+                        //Get and display a list of student's educational assistants
+                        try {
+                            $dataDetail = array('gibbonPersonID1' => $gibbonPersonID, 'gibbonSchoolYearID' => $_SESSION[$guid]['gibbonSchoolYearID'], 'gibbonPersonID2' => $gibbonPersonID);
+                            $sqlDetail = "(SELECT DISTINCT surname, preferredName, email
+                                FROM gibbonPerson
+                                    JOIN gibbonINAssistant ON (gibbonINAssistant.gibbonPersonIDAssistant=gibbonPerson.gibbonPersonID)
+                                WHERE status='Full'
+                                    AND gibbonPersonIDStudent=:gibbonPersonID1)
+                            UNION
+                            (SELECT DISTINCT surname, preferredName, email
+                                FROM gibbonPerson
+                                    JOIN gibbonRollGroup ON (gibbonRollGroup.gibbonPersonIDEA=gibbonPerson.gibbonPersonID OR gibbonRollGroup.gibbonPersonIDEA2=gibbonPerson.gibbonPersonID OR gibbonRollGroup.gibbonPersonIDEA3=gibbonPerson.gibbonPersonID)
+                                    JOIN gibbonStudentEnrolment ON (gibbonStudentEnrolment.gibbonRollGroupID=gibbonRollGroup.gibbonRollGroupID)
+                                    JOIN gibbonSchoolYear ON (gibbonStudentEnrolment.gibbonSchoolYearID=gibbonSchoolYear.gibbonSchoolYearID)
+                                WHERE gibbonStudentEnrolment.gibbonSchoolYearID=:gibbonSchoolYearID
+                                    AND gibbonStudentEnrolment.gibbonPersonID=:gibbonPersonID2
+                            )
+                            ORDER BY preferredName, surname, email";
+                            $resultDetail = $connection2->prepare($sqlDetail);
+                            $resultDetail->execute($dataDetail);
+                        } catch (PDOException $e) {
+                            echo "<div class='error'>".$e->getMessage().'</div>';
+                        }
+                        if ($resultDetail->rowCount() > 0) {
+                            echo '<h4>';
+                            echo __($guid, "Student's Educational Assistants");
+                            echo '</h4>';
+
+                            echo '<ul>';
+                            while ($rowDetail = $resultDetail->fetch()) {
+                                echo '<li>'.htmlPrep(formatName('', $rowDetail['preferredName'], $rowDetail['surname'], 'Student', false));
+                                if ($rowDetail['email'] != '') {
+                                    echo htmlPrep(' <'.$rowDetail['email'].'>');
+                                }
+                                echo '</li>';
                             }
                             echo '</ul>';
                         }
