@@ -41,6 +41,7 @@ v15.0.00
 		Behaviour: fixed typo in three settings
 		Departments: fixed bug preventing students from seeing other students in a class
 		Finance: set name of outgoing email to school name, not user's name
+		Individual Needs: added ability to record educational assistants for a student
 		Library: added Optical Media as item type
 		Students: fixed School History section in Student Profile to exclude upcoming years
 		Students: fixed Application Form for logged in users not selecting a family by default (if one exists)
